--- a/stay.css
+++ b/stay.css
@@ -34,10 +34,10 @@ body {
 .tarjeta h5 {
     color: white;
 }
-#cancelar, #imprimir {
+ #imprimir {
     display: none;
 }
-/*color del footer*/
+/*color del footer (usamos ia)*/
 footer,
 footer * {
     color: #fff !important;
@@ -60,4 +60,13 @@ footer {
 }
 h2 {
     color: white !important;
+}
+/*boton eliminar*/
+#cancelar {
+  float: right;
+}
+.btn-white {
+  background-color: transparent; 
+  color: white;                 
+  border: 2px solid white;       
 }
